--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -8,10 +8,12 @@
         {{ form_row(form.date) }}
         {{ form_row(form.description) }}
         <hr>
-        {% for shift in form.shifts %}
-            <li>{{ form_widget(shift) }}</li>
-        {% endfor %}
-        <input type="submit" value="Create" />
+        <ul class="shifts" data-prototype="{{ form_widget(form.shifts.vars.prototype)|e('html_attr') }}">
+            {% for shift in form.shifts %}
+                <li>{{ form_widget(shift) }}</li>
+            {% endfor %}
+        </ul>
+        <input class="btn btn-primary" type="submit" value="Create" />
     {{ form_end(form) }}
 
     <ul>
