--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -1,44 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Plan</h1>
+    <div class="row">
+        <div class="col-12 d-flex justify-content-end">
+            <h1 class="mr-auto p-2">{{ plan.title }}</h1>
+            <h6 class="p-2">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</h6>
+        </div>
+        {% if plan.description %}
+            <div class="col-12">
+                <h6>Description</h6>
+                {{ plan.description }}
+            </div>
+        {% endif %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ plan.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ plan.title }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{% if plan.date %}{{ plan.date|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ plan.description }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    {% for shift in plan.shifts %}
-        <li>{{ shift.title }}</li>
-    {% endfor %}
-
-    <ul>
-        <li>
-            <a href="{{ path('plan_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('plan_edit', { 'id': plan.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+        <div class="col-12">
+            <table class="table">
+                <thead class="thead-default">
+                <tr>
+                    <th>Shift Title</th>
+                    <th>Starts</th>
+                    <th>Ends</th>
+                    <th>Description</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for shift in plan.shifts %}
+                    <tr>
+                        <th scope="row">{{ shift.title }}</th>
+                        <td>{{ shift.start|date('h:m') }}</td>
+                        <td>{{ shift.end|date('h:m') }}</td>
+                        <td>{{ shift.description }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
