--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">New Plan</a>
+                        <a class="nav-link" href="{{ path('plan_new') }}">New Plan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">All Plans</a>
+                        <a class="nav-link" href="{{ path('plan_index') }}">All Plans</a>
                     </li>
                 </ul>
             </div>
