--- a/app/Resources/views/person/new.html.twig
+++ b/app/Resources/views/person/new.html.twig
@@ -4,8 +4,11 @@
     <h1>Person creation</h1>
 
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+    {{ form_row(form.name) }}
+    {{ form_row(form.email) }}
+    {{ form_row(form.phone) }}
+
+    <input type="submit" value="Create" />
     {{ form_end(form) }}
 
     <ul>
