--- a/app/Resources/views/person/new.html.twig
+++ b/app/Resources/views/person/new.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Person creation</h1>
+    <div class="col-12">
+        <h1>Sign up for this shift</h1>
+    </div>
 
-    {{ form_start(form) }}
-    {{ form_row(form.name) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.phone) }}
-
-    <input type="submit" value="Create" />
-    {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('person_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    <div class="col-12">
+        <div class="form-group">
+            {{ form_start(form) }}
+            {{ form_row(form.name) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.phone) }}
+        </div>
+        <input class="btn btn-primary" type="submit" value="Create" />
+        {{ form_end(form) }}
+    </div>.
+    
 {% endblock %}
