--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -33,7 +33,9 @@
                         <td>{{ shift.description }}</td>
                         <td>
                             <ol>
-                            {% for person in 1..shift.numberPeople %}
+                                {% set foo = shift.numberPeople - (shift.people|length) %}
+                                {{ foo }}
+                            {% for person in 1..foo %}
                                 <li><a href="{{ path('person_new', { 'shift': shift.id }) }}">Sign in</a> </li>
                             {% endfor %}
                                 {% for person in shift.people %}
