added template draft

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('plan_index') }}">All Plans</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('plan_tempalte_index') }}">Template</a>
+                    </li>
                 </ul>
             </div>
         </nav>
