--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,10 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_new') }}">New Plan</a>
+                        <a class="nav-link" href="{{ path('plan_new') }}">New plan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_index') }}">All Plans</a>
+                        <a class="nav-link" href="{{ path('plan_new_by_template') }}">New plan by template</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('plan_index') }}">All plans</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('plan_tempalte_index') }}">Template</a>
