added user info when no templates defined

--- a/app/Resources/views/plan/index-template.html.twig
+++ b/app/Resources/views/plan/index-template.html.twig
@@ -29,7 +29,7 @@
         </table>
         {% else %}
             <div class="alert alert-warning" role="alert">
-                <strong>Warning!</strong> No upcoming event plans.
+                <strong>Warning!</strong> No templates defined
             </div>
         {% endif %}
     </div>
