--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,24 +16,24 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('plan_index') }}">Home</a>
+            <a class="navbar-brand" href="{{ path('plan_index') }}"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_new') }}">New plan</a>
+                        <a class="nav-link" href="{{ path('plan_new') }}"><i class="fa fa-map" aria-hidden="true"></i> New plan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_new_by_template') }}">New plan by template</a>
+                        <a class="nav-link" href="{{ path('plan_new_by_template') }}"><i class="fa fa-id-card-o" aria-hidden="true"></i> New plan by template</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_index') }}">All plans</a>
+                        <a class="nav-link" href="{{ path('plan_index') }}"><i class="fa fa-list" aria-hidden="true"></i> All plans</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_tempalte_index') }}">Template</a>
+                        <a class="nav-link" href="{{ path('plan_tempalte_index') }}"><i class="fa fa-list-alt" aria-hidden="true"></i> Templates</a>
                     </li>
                 </ul>
             </div>
