distance between nav and content

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row">
+            <div class="row main-row">
                 {% block body %}{% endblock %}
             </div>
         </div>
