--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,21 +22,24 @@
             </button>
             <a class="navbar-brand" href="{{ path('plan_index') }}"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_new') }}"><i class="fa fa-map" aria-hidden="true"></i> New plan</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_new_by_template') }}"><i class="fa fa-id-card-o" aria-hidden="true"></i> New plan by template</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_index') }}"><i class="fa fa-list" aria-hidden="true"></i> All plans</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('plan_tempalte_index') }}"><i class="fa fa-list-alt" aria-hidden="true"></i> Templates</a>
-                    </li>
-                </ul>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('plan_new') }}"><i class="fa fa-map" aria-hidden="true"></i> New plan</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('plan_new_by_template') }}"><i class="fa fa-id-card-o" aria-hidden="true"></i> New plan by template</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('plan_index') }}"><i class="fa fa-list" aria-hidden="true"></i> All plans</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('plan_tempalte_index') }}"><i class="fa fa-list-alt" aria-hidden="true"></i> Templates</a>
+                        </li>
+                    </ul>
+                {% endif %}
             </div>
+            {% if is_granted('ROLE_ADMIN') %}<a class="nav-link pull-right" href="{{ path('logout') }}"><i class="fa fa-sign-out" aria-hidden="true"></i></a>{% endif %}
         </nav>
         <div class="container">
             <div class="row main-row">
