--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,9 +5,9 @@
         <h1 class="display-3">Schicht-Plan.ch</h1>
         <p class="lead">This is a simple shift planning tool inspired by <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a></p>
         <hr class="my-4">
-        <p>To create shit plan templates you have to log in below</p>
+        <p>To create a shift plan template you have to log in below</p>
         <p class="lead">
-            <a class="btn btn-md btn-primary" href="#" role="button">Create a shift plan</a>
+            <a class="btn btn-md btn-primary" href="{{ path('plan_new_by_template') }}" role="button">Create a shift plan</a>
             or
             <a class="btn btn-md btn-primary" href="{{ path('login') }}" role="button">Login</a>
         </p>
