--- a/app/Resources/views/plan/index.html.twig
+++ b/app/Resources/views/plan/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="col-12 d-flex justify-content-end">
         <h1 class="mr-auto p-2">Event List</h1>
-        <a href="{{ path('plan_new') }}"><i class="fa p2 fa-3x fa-plus-square" aria-hidden="true"></i></a>
+        <a href="{{ path('plan_new') }}"><i class="fa p2 fa-2x fa-plus" aria-hidden="true"></i></a>
     </div>
 
     <div class="col-12">
