--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -11,9 +11,11 @@
             {{ form_label(form.title) }}
             {{ form_errors(form.title) }}
             {{ form_widget(form.title) }}
-        {{ form_row(form.date) }}
-        {{ form_row(form.description) }}
-        {{ form_row(form.isTemplate) }}
+            {{ form_row(form.date) }}
+            {{ form_row(form.description) }}
+            <div {% if not is_granted('ROLE_ADMIN') %}style="display:none"{% endif %}>
+                {{ form_row(form.isTemplate) }}
+            </div>
         </div>
         <hr>
         <h3>Shifts</h3>
