--- a/app/Resources/views/plan/new.html.twig
+++ b/app/Resources/views/plan/new.html.twig
@@ -13,6 +13,7 @@
             {{ form_widget(form.title) }}
             {{ form_row(form.date) }}
             {{ form_row(form.description) }}
+            {{ form_row(form.password) }}
             <div {% if not is_granted('ROLE_ADMIN') %}style="display:none"{% endif %}>
                 {{ form_row(form.isTemplate) }}
             </div>
