--- a/app/Resources/views/person/new.html.twig
+++ b/app/Resources/views/person/new.html.twig
@@ -9,6 +9,7 @@
         <div class="form-group">
             {{ form_start(form) }}
             {{ form_row(form.name) }}
+            {{ form_row(form.alias) }}
             {{ form_row(form.email) }}
             {{ form_row(form.phone) }}
         </div>
