show password per plan if session active

--- a/app/Resources/views/plan/new-by-template.html.twig
+++ b/app/Resources/views/plan/new-by-template.html.twig
@@ -11,7 +11,7 @@
             <div class="form-group">
                 {{ form_widget(form) }}
             </div>
-            <input class="btn btn-primary" type="submit" value="Choose" />
+            <input class="btn btn-primary" type="submit" value="Create" />
             {{ form_end(form) }}
         </div>
     {% else %}
