--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% if app.session.get(plan.id) is defined  %}
+        {% set showDetails=true %}
+    {% endif %}
+
     <div class="col-12 d-flex justify-content-end">
         <h1 class="mr-auto p-2">{{ plan.title }}</h1>
         <h6 class="p-2">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</h6>
@@ -9,11 +13,12 @@
         <div class="col-12">
             <blockquote class="blockquote">{{ plan.description }}</blockquote>
             {% if is_granted('ROLE_ADMIN') %}<a class="pull-right" href="{{ path('plan_edit', { 'id': plan.id }) }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>{% endif %}
+            {% if app.session.get(plan.id) is not empty %}
+                <div class="alert alert-info" role="alert">
+                    <strong>Important!</strong> Save this password: <b>{{ app.session.get(plan.id) }}</b> <br>You'll need it to access the plan details.
+                </div>
+            {% endif %}
         </div>
-    {% endif %}
-
-    {% if app.session.get('show_details_plan_id') == plan.id  %}
-        {% set showDetails=true %}
     {% endif %}
 
     <div class="col-12">
